@@ -1,7 +1,9 @@
 2006-06-07 Alasdair Allan <aa@astro.ex.ac.uk> 
 
 	* VOEvent.pm: Reduced minimum hash for an event message down to
-	  Role and ID, removed requirement for WhereWhen or Ref
+	  Role and ID, removed requirement for WhereWhen or Ref. Put an
+	  if() blovk around WhereWhen so it doesn't get automagically
+	  created.
 
 2006-05-22  Alasdair Allan <aa@astro.ex.ac.uk> (VOEvent-v1.1-060519.xsd)
 
